code maintenance - removed warnings and replaced deprecated functions